--- a/requirements.txt
+++ b/requirements.txt
@@ -1,191 +1,172 @@
 aiohttp==3.9.3
 aiosignal==1.3.1
 annotated-types==0.6.0
-anyio==4.2.0
+anyio==4.3.0
+archspec @ file:///croot/archspec_1697725767277/work
 asgiref==3.7.2
 attrs==23.2.0
-Authlib==1.3.0
 backoff==2.2.1
 bcrypt==4.1.2
 beautifulsoup4==4.12.3
-Brotli @ file:///private/tmp/python-brotli-20231117-5377-1dmlxkj/Brotli-1.1.0
+boltons @ file:///Users/cbousseau/work/recipes/ci_py311/boltons_1677965141748/work
+Brotli @ file:///Users/cbousseau/work/recipes/ci_py311/brotli-split_1677936346777/work
 bs4==0.0.2
-build==1.0.3
-cachetools==5.3.2
-certifi @ file:///private/tmp/python-certifi-20240201-4765-6ufe0c/certifi-2024.2.2
-cffi @ file:///private/tmp/cffi-20231211-40239-j25k6o/cffi-1.16.0
+build==1.1.1
+cachetools==5.3.3
+certifi @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_35eq66o3mo/croot/certifi_1700501684871/work/certifi
+cffi @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_b4nang6w_y/croot/cffi_1700254307954/work
 chardet==5.2.0
 charset-normalizer==3.3.2
 chroma-hnswlib==0.7.3
-chromadb==0.4.22
-click @ file:///private/tmp/python-click-20231211-45777-jkrufz/click-8.1.7
+chromadb==0.4.24
+click==8.1.7
 coloredlogs==15.0.1
-cryptography @ file:///private/tmp/python-cryptography-20240211-5705-25qm5e/cryptography-42.0.2
+conda @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_e1pbeimigh/croot/conda_1701719523512/work
+conda-content-trust @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_5324skqvu9/croot/conda-content-trust_1693490622873/work
+conda-libmamba-solver @ file:///croot/conda-libmamba-solver_1702997573971/work/src
+conda-package-handling @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_fc4cx8vjhj/croot/conda-package-handling_1690999937094/work
+conda_package_streaming @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_aecpaup22q/croot/conda-package-streaming_1690987978274/work
+cryptography @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_b1p0q5vizk/croot/cryptography_1702070293829/work
 dataclasses-json==0.6.4
-dataclasses-json-speakeasy==0.5.11
-decorator==5.1.1
 Deprecated==1.2.14
-deprecation==2.1.0
 dirtyjson==1.0.8
-distro==1.9.0
-docutils @ file:///private/tmp/docutils-20231211-36728-9mhbst/docutils-0.20.1
+distro @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_10ye1wu827/croot/distro_1701455019085/work
 emoji==2.10.1
-fastapi==0.109.2
+fastapi==0.110.0
 filelock==3.13.1
 filetype==1.2.0
 flatbuffers==23.5.26
 frozenlist==1.4.1
 fsspec==2024.2.0
-google-auth==2.28.0
+google-auth==2.28.1
 googleapis-common-protos==1.62.0
 greenlet==3.0.3
-grpcio==1.60.1
-grpcio-tools==1.60.1
+grpcio==1.62.0
 h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
-httpcore==1.0.3
+httpcore==1.0.4
 httptools==0.6.1
-httpx==0.25.2
-huggingface-hub==0.20.3
+httpx==0.27.0
+huggingface==0.0.1
+huggingface-hub==0.21.3
 humanfriendly==10.0
-hyperframe==6.0.1
-idna==3.6
+idna @ file:///Users/cbousseau/work/recipes/ci_py311/idna_1677906072337/work
 importlib-metadata==6.11.0
-importlib-resources==6.1.1
+importlib_resources==6.1.2
 Jinja2==3.1.3
 joblib==1.3.2
-jsonpatch==1.33
+jsonpatch @ file:///tmp/build/80754af9/jsonpatch_1615747632069/work
 jsonpath-python==1.0.6
-jsonpointer==2.4
+jsonpointer==2.1
 kubernetes==29.0.0
-lancedb==0.5.5
-langchain==0.1.7
-langchain-community==0.0.20
-langchain-core==0.1.23
-langchain-experimental==0.0.51
-langchain-openai==0.0.6
 langdetect==1.0.9
-langsmith==0.0.87
-llama-index==0.10.7
-llama-index-agent-openai==0.1.1
-llama-index-core==0.10.7
-llama-index-embeddings-huggingface==0.1.1
-llama-index-embeddings-mistralai==0.1.2
-llama-index-embeddings-openai==0.1.3
+libmambapy @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_59l2npsw_8/croot/mamba-split_1698782625405/work/libmambapy
+llama-index==0.10.15
+llama-index-agent-openai==0.1.5
+llama-index-cli==0.1.7
+llama-index-core==0.10.15
+llama-index-embeddings-huggingface==0.1.4
+llama-index-embeddings-openai==0.1.6
+llama-index-indices-managed-llama-cloud==0.1.3
 llama-index-legacy==0.9.48
-llama-index-llms-ollama==0.1.1
-llama-index-llms-openai==0.1.2
-llama-index-multi-modal-llms-openai==0.1.1
-llama-index-program-openai==0.1.2
-llama-index-question-gen-openai==0.1.1
-llama-index-readers-file==0.1.3
-llama-index-vector-stores-chroma==0.1.2
-llama-index-vector-stores-qdrant==0.1.2
-llama-index-vector-stores-weaviate==0.1.1
+llama-index-llms-ollama==0.1.2
+llama-index-llms-openai==0.1.7
+llama-index-multi-modal-llms-openai==0.1.4
+llama-index-program-openai==0.1.4
+llama-index-question-gen-openai==0.1.3
+llama-index-readers-file==0.1.6
+llama-index-readers-llama-parse==0.1.3
+llama-index-vector-stores-chroma==0.1.5
+llama-parse==0.3.5
 llamaindex-py-client==0.1.13
 lxml==5.1.0
-Markdown @ file:///private/tmp/python-markdown-20240110-4739-mp2a5f/Markdown-3.5.2
-MarkupSafe @ file:///private/tmp/python-markupsafe-20240204-4734-rcyty/MarkupSafe-2.1.5
-marshmallow==3.20.2
-mistralai==0.0.11
+MarkupSafe==2.1.5
+marshmallow==3.21.0
+menuinst @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_a2fxmxkg_z/croot/menuinst_1702390297906/work
 mmh3==4.1.0
 monotonic==1.6
 mpmath==1.3.0
 multidict==6.0.5
-mutagen @ file:///private/tmp/python-mutagen-20231211-52937-mx9s2c/mutagen-1.47.0
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
 networkx==3.2.1
 nltk==3.8.1
-numpy @ file:///private/tmp/numpy-20240206-5894-1wazl8/numpy-1.26.4
+numpy==1.26.4
 oauthlib==3.2.2
-onnxruntime==1.17.0
-openai==1.12.0
-opentelemetry-api==1.22.0
-opentelemetry-exporter-otlp-proto-common==1.22.0
-opentelemetry-exporter-otlp-proto-grpc==1.22.0
-opentelemetry-instrumentation==0.43b0
-opentelemetry-instrumentation-asgi==0.43b0
-opentelemetry-instrumentation-fastapi==0.43b0
-opentelemetry-proto==1.22.0
-opentelemetry-sdk==1.22.0
-opentelemetry-semantic-conventions==0.43b0
-opentelemetry-util-http==0.43b0
-orjson==3.9.14
+onnxruntime==1.17.1
+openai==1.13.3
+opentelemetry-api==1.23.0
+opentelemetry-exporter-otlp-proto-common==1.23.0
+opentelemetry-exporter-otlp-proto-grpc==1.23.0
+opentelemetry-instrumentation==0.44b0
+opentelemetry-instrumentation-asgi==0.44b0
+opentelemetry-instrumentation-fastapi==0.44b0
+opentelemetry-proto==1.23.0
+opentelemetry-sdk==1.23.0
+opentelemetry-semantic-conventions==0.44b0
+opentelemetry-util-http==0.44b0
+orjson==3.9.15
 overrides==7.7.0
-packaging @ file:///private/tmp/python-packaging-20231211-10905-adsfgp/packaging-23.2
-pandas==2.2.0
-pathspec @ file:///private/tmp/python-pathspec-20231212-4946-k7fih8/pathspec-0.12.1
+packaging @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_6dm6d4jd_t/croot/packaging_1693575176524/work
+pandas==2.2.1
 pillow==10.2.0
-portalocker==2.8.2
-posthog==3.4.1
+platformdirs @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a8u4fy8k9o/croot/platformdirs_1692205661656/work
+pluggy @ file:///Users/cbousseau/work/recipes/ci_py311/pluggy_1677906980825/work
+posthog==3.4.2
 protobuf==4.25.3
 pulsar-client==3.4.0
-py==1.11.0
-pyarrow==15.0.0
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
-pycparser @ file:///private/tmp/pycparser-20231211-25057-cypg40/pycparser-2.21
-pydantic==2.6.1
-pydantic_core==2.16.2
-Pygments @ file:///private/tmp/pygments-20231121-5274-1rlyumb/pygments-2.17.2
-pylance==0.9.15
-PyMuPDF==1.23.24
+pycosat @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_3eg8vdcs6z/croot/pycosat_1696536519213/work
+pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+pydantic==2.6.3
+pydantic_core==2.16.3
+PyMuPDF==1.23.26
 PyMuPDFb==1.23.22
-pypandoc==1.13
+pyOpenSSL @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_b8whqav6qm/croot/pyopenssl_1690223428943/work
 pypdf==4.0.2
 PyPika==0.48.9
 pyproject_hooks==1.0.0
-python-dateutil @ file:///private/tmp/python-dateutil-20231119-5156-1u9krby/python-dateutil-2.8.2
+PySocks @ file:///Users/cbousseau/work/recipes/ci_py311/pysocks_1677906386870/work
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-iso639==2024.2.7
 python-magic==0.4.27
 pytz==2024.1
-pywatchman==1.4.1
-PyYAML @ file:///private/tmp/pyyaml-20231018-5610-1rdh755/PyYAML-6.0.1
-qdrant-client==1.7.3
+PyYAML==6.0.1
 rapidfuzz==3.6.1
-ratelimiter==1.2.0.post0
 regex==2023.12.25
-requests==2.31.0
+requests @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_54zi68h2nb/croot/requests_1690400233316/work
 requests-oauthlib==1.3.1
-retry==0.9.2
 rsa==4.9
+ruamel.yaml @ file:///Users/cbousseau/work/recipes/ci_py311/ruamel.yaml_1677934845850/work
 safetensors==0.4.2
-scikit-learn==1.4.1.post1
-scipy==1.12.0
-semver==3.0.2
-sentence-transformers==2.3.1
-sentencepiece==0.2.0
 six==1.16.0
-sniffio==1.3.0
+sniffio==1.3.1
 soupsieve==2.5
 SQLAlchemy==2.0.27
 starlette==0.36.3
 sympy==1.12
 tabulate==0.9.0
 tenacity==8.2.3
-threadpoolctl==3.3.0
 tiktoken==0.6.0
 tokenizers==0.15.2
-torch==2.2.0
+torch==2.2.1
 tqdm==4.66.2
-transformers==4.37.2
+transformers==4.38.2
+truststore @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_42mm7e6j06/croot/truststore_1695244298716/work
 typer==0.9.0
 typing-inspect==0.9.0
-typing_extensions @ file:///private/tmp/python-typing-extensions-20231212-4978-cvkltg/typing_extensions-4.9.0
+typing_extensions==4.10.0
 tzdata==2024.1
-unstructured==0.12.4
-unstructured-client==0.18.0
-urllib3==2.2.1
+unstructured==0.12.5
+unstructured-client==0.21.0
+urllib3 @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_068obtb882/croot/urllib3_1698257558009/work
 uvicorn==0.27.1
 uvloop==0.19.0
-validators==0.22.0
 watchfiles==0.21.0
-weaviate-client==3.26.2
 websocket-client==1.7.0
 websockets==12.0
 wrapt==1.16.0
 yarl==1.9.4
 zipp==3.17.0
+zstandard @ file:///Users/cbousseau/work/recipes/ci_py311_2/zstandard_1678996192313/work
