--- a/requirements.txt
+++ b/requirements.txt
@@ -42,13 +42,17 @@ google-auth==2.28.1
 googleapis-common-protos==1.62.0
 greenlet==3.0.3
 grpcio==1.62.0
+grpcio-tools==1.62.0
 h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
 httpcore==1.0.4
 httptools==0.6.1
 httpx==0.27.0
 huggingface==0.0.1
 huggingface-hub==0.21.3
 humanfriendly==10.0
+hyperframe==6.0.1
 idna @ file:///Users/cbousseau/work/recipes/ci_py311/idna_1677906072337/work
 importlib-metadata==6.11.0
 importlib_resources==6.1.2
@@ -76,6 +80,7 @@ llama-index-question-gen-openai==0.1.3
 llama-index-readers-file==0.1.6
 llama-index-readers-llama-parse==0.1.3
 llama-index-vector-stores-chroma==0.1.5
+llama-index-vector-stores-qdrant==0.1.3
 llama-parse==0.3.5
 llamaindex-py-client==0.1.13
 lxml==5.1.0
@@ -111,6 +116,7 @@ pandas==2.2.1
 pillow==10.2.0
 platformdirs @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_a8u4fy8k9o/croot/platformdirs_1692205661656/work
 pluggy @ file:///Users/cbousseau/work/recipes/ci_py311/pluggy_1677906980825/work
+portalocker==2.8.2
 posthog==3.4.2
 protobuf==4.25.3
 pulsar-client==3.4.0
@@ -133,6 +139,7 @@ python-iso639==2024.2.7
 python-magic==0.4.27
 pytz==2024.1
 PyYAML==6.0.1
+qdrant-client==1.7.3
 rapidfuzz==3.6.1
 regex==2023.12.25
 requests @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_54zi68h2nb/croot/requests_1690400233316/work
